@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.154.2.3 2005/01/26 04:05:34 jbj Exp $
+# $Id: macros.in,v 1.154.2.4 2005/07/13 10:16:06 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -430,10 +430,10 @@ print (t)\
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
 # helpers are also used by @RPMCONFIGDIR@/rpmdeps {--provides|--requires}.
-#%__perl_provides	@RPMCONFIGDIR@/perldeps.pl --provides
-#%__perl_requires	@RPMCONFIGDIR@/perldeps.pl --requires
-%__perl_provides	@RPMCONFIGDIR@/perl.prov
-%__perl_requires	@RPMCONFIGDIR@/perl.req
+%__perl_provides	@RPMCONFIGDIR@/perldeps.pl --provides
+%__perl_requires	@RPMCONFIGDIR@/perldeps.pl --requires
+#%__perl_provides	@RPMCONFIGDIR@/perl.prov
+#%__perl_requires	@RPMCONFIGDIR@/perl.req
 
 %__python_provides	@RPMCONFIGDIR@/pythondeps.sh --provides
 %__python_requires	@RPMCONFIGDIR@/pythondeps.sh --requires
